# pi-cesar

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.md
ArtPrompt/: EDO.ipynb
ArtPrompt/scripts/: translate.py
Hackaprompt/: EDA.ipynb
Hackaprompt/scripts/: download.py  translate.py
PI-Guard/: EDA.ipynb
PI-Guard/scripts/: check_translation.ipynb  convert_to_piguard.py  prepare_training.py  translate.py
PI-Guard/scripts/translated/gpt-4o/: BIPIA_code_pt_br.json  BIPIA_text_pt_br.json  NotInject_one_pt_br.parquet  NotInject_three_pt_br.parquet  NotInject_two_pt_br.parquet  wildguard_pt_br.json
PI-Guard/scripts/translated/gpt-4o-mini/: NotInject_one_pt_br.parquet  NotInject_three_pt_br.parquet  NotInject_two_pt_br.parquet
PI-Guard/scripts/translated/llama-3.3-70b-versatile/: NotInject_one_pt_br.parquet  NotInject_three_pt_br.parquet  NotInject_two_pt_br.parquet
Rogue Security/: EDA.ipynb
Rogue Security/scripts/: translate.py
Translation-Checker/hkp/: inject.py  validate.ipynb
Translation-Checker/rs/: validate.ipynb
docs/: data_analysis.md  data_analysis_v2.md  data_gather2.md  relatorio_traducoes.md  survey.md
